[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/PNG/Tombstone/tombstone_6.png" type="Texture" id=1]
[ext_resource path="res://Objects/PNG/Tombstone/tombstone_8.png" type="Texture" id=2]
[ext_resource path="res://Objects/PNG/Tombstone/tombstone_7.png" type="Texture" id=3]
[ext_resource path="res://Objects/PNG/Tombstone/tombstone_5.png" type="Texture" id=4]
[ext_resource path="res://Objects/PNG/Tombstone/tombstone_3.png" type="Texture" id=5]
[ext_resource path="res://Objects/PNG/Tombstone/tombstone_2.png" type="Texture" id=7]
[ext_resource path="res://Objects/PNG/Tombstone/tombstone_1.png" type="Texture" id=8]
[ext_resource path="res://Objects/PNG/Tombstone/tombstone_4.png" type="Texture" id=9]
[ext_resource path="res://Objects/Tombstone.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.1471, 13.1596 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 90.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
color = Color( 0.972549, 0.972549, 0.972549, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 162.689

[node name="Tombstone" type="Area2D"]
scale = Vector2( 4, 3 )
z_index = -1
collision_layer = 0
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0640742, 22.2069 )
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -0.258923, -5.66324 )
scale = Vector2( 0.3, 0.3 )
amount = 100
speed_scale = 0.2
process_material = SubResource( 3 )

[node name="PlayerNear" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNear"]
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Tombstone_body_entered"]
[connection signal="body_entered" from="PlayerNear" to="." method="_on_PlayerNear_body_entered"]
[connection signal="body_exited" from="PlayerNear" to="." method="_on_PlayerNear_body_exited"]
